--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
-    "pelican (>=4.11.0,<5.0.0)"
+    "pelican (>=4.11.0,<5.0.0)",
+    "markdown (>=3.9,<4.0)"
 ]
 
 
